--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
+  "scripts": {
+    "create-osmi": "npx hardhat run scripts/create-osmi.ts"
+  },
   "devDependencies": {
-    "@nomicfoundation/hardhat-ethers": "^3.0.6",
+    "@nomicfoundation/hardhat-ethers": "^3.0.8",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "@openzeppelin/hardhat-upgrades": "^3.1.0",
+    "@openzeppelin/hardhat-upgrades": "^3.5.0",
     "@types/chai": "^4.3.16",
     "@types/mocha": "^10.0.6",
     "@types/node": "^20.12.12",
     "chai": "^4.4.1",
-    "ethers": "^6.12.1",
-    "hardhat": "^2.22.4",
+    "eth-provider": "^0.13.7",
+    "ethers": "^6.13.4",
+    "hardhat": "^2.22.14",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
