--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eth-provider": "^0.13.7",
     "ethers": "^6.13.4",
     "hardhat": "^2.22.14",
+    "hardhat-contract-sizer": "^2.10.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
